--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,147 +3,222 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="#7458FF">
+    android:background="#5CA8FF">
 
     <EditText
         android:id="@+id/displayEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:inputType="text"
+        android:layout_height="81dp"
+        android:layout_margin="16dp"
         android:gravity="right"
-        android:layout_margin="16dp"/>
+        android:inputType="text"
+        android:textSize="24sp" />
 
-    <!-- Row 1 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonClear"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
+            android:layout_weight="1"
+            android:backgroundTint="#FF1212"
+            android:text="C"
+            android:textSize="30dp"
+            app:cornerRadius="50sp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonSqrt"
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:layout_marginStart="3dp"
+            android:layout_weight="1"
+            android:backgroundTint="#002DBF"
+            android:text="√"
+            android:textSize="30dp"
+            app:cornerRadius="55sp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonSquare"
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:layout_marginStart="3dp"
+            android:layout_weight="1"
+            android:backgroundTint="#002DBF"
+            android:text="^"
+            android:textSize="35dp"
+            app:cornerRadius="55sp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonPlus"
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:layout_marginStart="3dp"
+            android:layout_weight="1"
+            android:backgroundTint="#002DBF"
+            android:text="+"
+            android:textSize="35dp"
+            app:cornerRadius="55sp" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button7"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="7"
-            android:textSize="35dp"/>
+            android:textSize="35sp" />
 
-        <Button
+
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button8"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="8"
-            android:textSize="35dp"/>
+            android:textSize="35sp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button9"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="9"
-            android:textSize="35dp"/>
+            android:textSize="35sp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonDivide"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#002DBF"
+            app:cornerRadius="50sp"
             android:text="/"
-            android:textSize="35dp"/>
+            android:textSize="35sp" />
 
     </LinearLayout>
 
-    <!-- Row 2 -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button4"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="4"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button5"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="5"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button6"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="6"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMultiply"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#002DBF"
+            app:cornerRadius="50sp"
             android:text="*"
             android:textSize="35dp"/>
 
     </LinearLayout>
 
-    <!-- Row 3 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button1"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="50sp"
             android:text="1"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button2"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="55sp"
             android:text="2"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button3"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="55sp"
             android:text="3"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMinus"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#002DBF"
+            app:cornerRadius="55sp"
             android:text="-"
             android:textSize="35dp"/>
 
@@ -155,82 +230,51 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button0"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#126DFF"
+            app:cornerRadius="55sp"
             android:text="0"
             android:textSize="35dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonDot"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#002DBF"
+            app:cornerRadius="55sp"
             android:text="."
             android:textSize="35dp"/>
 
-        <Button
-            android:id="@+id/buttonEquals"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonPercent"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
             android:layout_weight="1"
-            android:background="@drawable/round_button"
+            android:backgroundTint="#002DBF"
+            app:cornerRadius="55sp"
+            android:text="%"
+            android:textSize="35dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonEquals"
+            android:layout_width="0dp"
+            android:layout_marginStart="3dp"
+            android:layout_height="110dp"
+            android:layout_weight="1"
+            android:backgroundTint="#002DBF"
+            app:cornerRadius="55sp"
             android:text="="
             android:textSize="35dp"/>
 
-        <Button
-            android:id="@+id/buttonPlus"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_button"
-            android:text="+"
-            android:textSize="35dp"/>
 
     </LinearLayout>
-    <!-- Row 5 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/buttonSqrt"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_button"
-            android:text="√"
-            android:textSize="35dp"/>
-
-        <Button
-            android:id="@+id/buttonSquare"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_button"
-            android:text="^"
-            android:textSize="35dp"/>
-
-        <Button
-            android:id="@+id/buttonPercent"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_button"
-            android:text="%"
-            android:textSize="35dp"/>
-        <Button
-            android:id="@+id/buttonClear"
-            android:layout_width="17dp"
-            android:layout_height="107dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_button"
-            android:text="C"
-            android:textSize="35dp"/>
 
     </LinearLayout>
-</LinearLayout>
